--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ button.btn {
   width: 40px;
   height: 40px;
   border-radius: 100%;
-  background-color: rgb(167 166 166 / 84%);
+  background-color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
